improve mobile nav menu

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
     <div class="h-min">
         <!-- navbar goes here -->
-        <nav class="max-w-7xl mx-auto px-8 md:mx-8 lg:mx-auto md:flex md:items-center md:justify-between" x-data="{ navBar: false }">
+        <nav class="max-w-7xl mx-auto px-8 md:mx-8 lg:mx-auto md:flex md:items-center md:justify-between"
+            x-data="{ navBar: false }">
             <div class="flex justify-between items-center h-24">
                 <a href="https://milindgoel15.github.io">
                     <svg height="40px" width="40px" class="logoHover" xmlns="http://www.w3.org/2000/svg"
@@ -59,23 +60,28 @@
                 </button>
             </div>
 
-            <ul class="md:flex md:items-center z-[1] md:z-auto md:static absolute w-full left-0 md:w-auto bg-[#14161a] md:py-0 space-x-4 md:pl-0 pl-3 md:opacity-100 top-[-400px] transition-all ease-in duration-350"
+            <ul class="md:flex md:items-center z-[1] text-center md:z-auto md:static absolute w-full left-0 md:w-auto bg-primary backdrop-blur md:py-0 space-x-4 md:opacity-100 top-[-400px] transition-all ease-in duration-400"
                 :class="{'top-[95px]': navBar, 'opacity-0': !navBar }">
-                <li class="mx-4 my-6 md:my-0 md:mx-0">
+                
+                <li class="ml-4 my-6 md:my-0 md:mx-0">
                     <a href="works"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" @click="navBar = false">Works</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300"
+                        @click="navBar = false">Works</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="skills"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" @click="navBar = false">Skills</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300"
+                        @click="navBar = false">Skills</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="contact"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" @click="navBar = false">Contact</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300"
+                        @click="navBar = false">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="CV.pdf"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" @click="navBar = false">Resume</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300"
+                        @click="navBar = false">Resume</a>
                 </li>
             </ul>
         </nav>
