--- a/skills.html
+++ b/skills.html
@@ -59,10 +59,10 @@
                 </button>
             </div>
 
-            <ul class="md:flex md:items-center z-[1] md:z-auto md:static absolute w-full left-0 md:w-auto bg-[#14161a] md:py-0 space-x-4 md:pl-0 pl-3 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-350"
+            <ul class="md:flex md:items-center z-[1] text-center md:z-auto md:static absolute w-full left-0 md:w-auto bg-primary backdrop-blur md:py-0 space-x-4 md:opacity-100 top-[-400px] transition-all ease-in duration-400"
                 :class="{'top-[95px]': navBar, 'opacity-0': !navBar }">
-
-                <li class="mx-4 my-6 md:my-0 md:mx-0">
+                
+                <li class="ml-4 my-6 md:my-0 md:mx-0">
                     <a href="works"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
                         @click="navBar = false">Works</a>
@@ -171,7 +171,7 @@
                                 style="width: 20%"></span>
                         </div>
                     </div>
-                    
+
                 </div>
 
             </div>
