--- a/works.html
+++ b/works.html
@@ -7,11 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recent Works & Contributions</title>
-    <meta name="description" content="Building beautiful web experiences for various businesses with coffee and code. Made with ❤ by Milind Goel">
+    <meta name="description"
+        content="Building beautiful web experiences for various businesses with coffee and code. Made with ❤ by Milind Goel">
     <meta name="keywords" content="Milind Goel, milindgoel15, Web Developer">
     <meta name="title" content="Recent Works & Contributions">
     <meta property="og:title" content="Recent Works & Contributions">
-    <meta property="og:description" content="Building beautiful web experiences for various businesses with coffee and code. Made with ❤ by Milind Goel">
+    <meta property="og:description"
+        content="Building beautiful web experiences for various businesses with coffee and code. Made with ❤ by Milind Goel">
     <meta property="og:url" content="https://milindgoel15.github.io">
     <meta property="og:site_name" content="milindgoel15.github.io/works">
 
@@ -58,40 +60,45 @@
                 </button>
             </div>
 
-            <ul
-                class="md:flex md:items-center z-[1] md:z-auto md:static absolute w-full left-0 md:w-auto bg-[#14161a] md:py-0 space-x-4 md:pl-0 pl-3 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-350"
+            <ul class="md:flex md:items-center z-[1] text-center md:z-auto md:static absolute w-full left-0 md:w-auto bg-primary backdrop-blur md:py-0 space-x-4 md:opacity-100 top-[-400px] transition-all ease-in duration-400"
                 :class="{'top-[95px]': navBar, 'opacity-0': !navBar }">
-
-                <li class="mx-4 my-6 md:my-0 md:mx-0">
+                
+                <li class="ml-4 my-6 md:my-0 md:mx-0">
                     <a href="works"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Works</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Works</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="skills"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Skills</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Skills</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="contact"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Contact</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="CV.pdf"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Resume</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Resume</a>
                 </li>
             </ul>
         </nav>
 
         <!-- content goes here -->
         <div class="py-32 text-center animate-this cursor-none" data-barba="container" data-barba-namespace="works">
-            <h2 class="font-extrabold text-2xl py-5 xl:mx-80 2xl:mx-110 text-white md:text-4xl cursorHover">Recents Works & Contributions</h2>
+            <h2 class="font-extrabold text-2xl py-5 xl:mx-80 2xl:mx-110 text-white md:text-4xl cursorHover">Recents
+                Works & Contributions</h2>
 
             <div class="flex justify-center">
 
-                <div class="grid grid-rows-4 gap-2 sm:mt-12 sm:grid-cols-2 sm:grid-rows-2 sm:gap-6 lg:grid-col-2 lg:grid-flow-col lg:gap-8">
+                <div
+                    class="grid grid-rows-4 gap-2 sm:mt-12 sm:grid-cols-2 sm:grid-rows-2 sm:gap-6 lg:grid-col-2 lg:grid-flow-col lg:gap-8">
                     <a href="http://abhishekgoelandassociates.com" target="blank">
 
-                        <div
-                            class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[16rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
+                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[16rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Abhishek Goel & Associates</h2>
                             <p class="text-lg text-slate-200">Website for Chartered Accountant firm</p>
@@ -102,23 +109,25 @@
 
                     <a href="https://github.com/RetroMusicPlayer" target="blank">
 
-                        <div
-                            class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
+                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Retro Music Player</h2>
-                            <p class="text-lg text-slate-200 py-1">Member and contributor of Retro Music Player, a material
+                            <p class="text-lg text-slate-200 py-1">Member and contributor of Retro Music Player, a
+                                material
                                 design, offline music player for Android.</p>
                         </div>
 
                     </a>
 
                     <a href="http://mwsretail.in" target="blank">
-                        <div
-                            class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
+                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Milind Webcomm Services</h2>
                             <p class="text-lg text-slate-200">Website for Web Designing and E-Commerce operators</p>
-                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written with TailwindCSS & AlpineJS</p>
+                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written with TailwindCSS & AlpineJS
+                            </p>
 
                         </div>
 
@@ -128,12 +137,13 @@
 
                     <a href="https://github.com/milindgoel15/milindgoel15.github.io" target="blank">
 
-                        <div
-                            class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
+                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Personal Portfolio</h2>
                             <p class="text-lg text-slate-200">Designed personal Portfolio website for myself</p>
-                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written with TailwindCSS, AlpineJS, BarbaJS & GSAP</p>
+                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written with TailwindCSS, AlpineJS,
+                                BarbaJS & GSAP</p>
 
                         </div>
 
@@ -145,7 +155,8 @@
 
             <a href="https://github.com/milindgoel15?tab=repositories">
                 <button
-                    class="py-6 my-20 px-7 text-xl md:py-5 md:px-7 md:my-24 xl:my-20 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700" x-intersect="$el.classList.add('fadeInUp')">Other
+                    class="py-6 my-20 px-7 text-xl md:py-5 md:px-7 md:my-24 xl:my-20 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700"
+                    x-intersect="$el.classList.add('fadeInUp')">Other
                     Contributions</button>
             </a>
 
