--- a/contact.html
+++ b/contact.html
@@ -57,25 +57,28 @@
                 </button>
             </div>
 
-            <ul
-                class="md:flex md:items-center z-[1] md:z-auto md:static absolute w-full left-0 md:w-auto bg-[#14161a] md:py-0 space-x-4 md:pl-0 pl-3 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-350"
+            <ul class="md:flex md:items-center z-[1] text-center md:z-auto md:static absolute w-full left-0 md:w-auto bg-primary backdrop-blur md:py-0 space-x-4 md:opacity-100 top-[-400px] transition-all ease-in duration-400"
                 :class="{'top-[95px]': navBar, 'opacity-0': !navBar }">
-
-                <li class="mx-4 my-6 md:my-0 md:mx-0">
+                
+                <li class="ml-4 my-6 md:my-0 md:mx-0">
                     <a href="works"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Works</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Works</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="skills"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Skills</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Skills</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="contact"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Contact</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="CV.pdf"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small" @click="navBar = false">Resume</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
+                        @click="navBar = false">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -85,11 +88,12 @@
 
             <div class="flex justify-center">
 
-                <div class="grid grid-rows-6 gap-4 sm:grid-cols-2 sm:grid-rows-3 sm:mt-6 sm:gap-8 lg:grid-col-2 lg:grid-rows-3 lg:grid-flow-col lg:gap-12">
+                <div
+                    class="grid grid-rows-6 gap-4 sm:grid-cols-2 sm:grid-rows-3 sm:mt-6 sm:gap-8 lg:grid-col-2 lg:grid-rows-3 lg:grid-flow-col lg:gap-12">
                     <a href="http://linkedin.com/in/milindgoel15" target="blank">
 
-                        <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
+                        <div class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -113,11 +117,12 @@
 
                     <a href="mailto:milindgoel15@gmail.com" target="blank">
 
-                        <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
+                        <div class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff" viewBox="0 0 272 194">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
+                                    viewBox="0 0 272 194">
                                     <g id="Layer_2" data-name="Layer 2">
                                         <g id="Layer_1-2" data-name="Layer 1">
                                             <path
@@ -141,8 +146,8 @@
 
                     <a href="http://github.com/milindgoel15" target="blank">
 
-                        <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
+                        <div class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -166,8 +171,8 @@
 
                     <a href="http://telegram.me/milindgoel15" target="blank">
 
-                        <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
+                        <div class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -190,8 +195,8 @@
 
                     <a href="http://youtube.com/milindgoel15" target="blank">
 
-                        <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
+                        <div class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
@@ -215,8 +220,8 @@
 
                     <a href="http://instagram.com/milindgoel15" target="blank">
 
-                        <div
-                            class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl" x-intersect="$el.classList.add('fadeInUp')">
+                        <div class="p-8 flex items-center bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 h-40 w-84 sm:ml-0 sm:mt-0 sm:w-80 lg:w-[30rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
 
                             <div class="lg:pl-2.5 pt-1.5">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff"
