--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                         @click="navBar = false">Resume</a>
                 </li>
             </ul>
+            <div class="w-96 h-96 -ml-56 pointer-events-none absolute  border-2 border-gray-600 rounded-full"></div>
         </nav>
 
         <!-- content goes here -->
@@ -103,6 +104,7 @@
                 a Front-End Web Developer, UI/UX Designer based in India
             </p>
 
+            <div class="w-96 h-96 ml-180 pointer-events-none absolute border-2 border-gray-600 rounded-full"></div>
             <a href="contact">
                 <button
                     class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700">
