--- a/works.html
+++ b/works.html
@@ -90,6 +90,7 @@
                         @click="navBar = false">Resume</a>
                 </li>
             </ul>
+            <div class="w-96 h-96 -ml-56 pointer-events-none absolute  border-2 border-gray-600 rounded-full"></div>
         </nav>
 
         <!-- content goes here -->
@@ -140,7 +141,6 @@
                     </a>
 
 
-
                     <a href="https://github.com/milindgoel15/milindgoel15.github.io" target="blank">
 
                         <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
@@ -152,8 +152,10 @@
                                 BarbaJS & GSAP</p>
 
                         </div>
-
                     </a>
+                    <div
+                        class="w-96 h-96 ml-162 -z-10 pointer-events-none absolute border-2 border-gray-600 rounded-full">
+                    </div>
 
                 </div>
 
@@ -169,6 +171,7 @@
             <p class="text-slate-300 footer mt-12 mainContent">Made with <span class="text-red-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
 
+            <div class="w-96 h-96 ml-24 pointer-events-none absolute border-2 border-gray-600 rounded-full"></div>
         </div>
     </div>
 
