--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,7 @@
                         @click="navBar = false">Resume</a>
                 </li>
             </ul>
+            <div class="w-96 h-96 -ml-56 pointer-events-none absolute  border-2 border-gray-600 rounded-full"></div>
         </nav>
 
         <div class="py-32 text-center animate-this cursor-none" data-barba="container" data-barba-namespace="contact">
@@ -247,6 +248,8 @@
                             </div>
                         </div>
                     </a>
+                    <div class="w-96 h-96 ml-180 pointer-events-none absolute border-2 border-gray-600 rounded-full">
+                    </div>
                 </div>
 
             </div>
