--- a/skills.html
+++ b/skills.html
@@ -40,7 +40,7 @@
         <div class="loading-screen"></div>
     </div>
 
-    <div class="h-min">
+    <div>
         <!-- navbar goes here -->
         <nav class=" max-w-7xl mx-auto px-8 md:flex md:items-center md:justify-between" x-data="{ navBar: false }">
             <div class="flex justify-between items-center h-24">
@@ -89,6 +89,7 @@
                         @click="navBar = false">Resume</a>
                 </li>
             </ul>
+            <div class="w-96 h-96 -ml-56 pointer-events-none absolute  border-2 border-gray-600 rounded-full"></div>
         </nav>
 
         <!-- content goes here -->
@@ -177,11 +178,11 @@
                                 style="width: 20%"></span>
                         </div>
                     </div>
-
+                    <div class="w-96 h-96 ml-174 pointer-events-none absolute border-2 border-gray-600 rounded-full">
+                    </div>
                 </div>
 
             </div>
-
             <p class="text-slate-300 footer mt-24 cursorHover">Made with <span class="text-red-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
         </div>
