--- a/skills.html
+++ b/skills.html
@@ -89,7 +89,7 @@
                         @click="navBar = false">Resume</a>
                 </li>
             </ul>
-            <div class="w-96 h-96 -ml-56 pointer-events-none absolute  border-2 border-gray-600 rounded-full"></div>
+            <div class="hidden lg:block w-96 h-96 -ml-56 pointer-events-none absolute  border-2 border-gray-600 rounded-full"></div>
         </nav>
 
         <!-- content goes here -->
@@ -178,7 +178,7 @@
                                 style="width: 20%"></span>
                         </div>
                     </div>
-                    <div class="w-96 h-96 ml-174 pointer-events-none absolute border-2 border-gray-600 rounded-full">
+                    <div class="hidden lg:block w-96 h-96 ml-174 pointer-events-none absolute border-2 border-gray-600 rounded-full">
                     </div>
                 </div>
 
