--- a/works.html
+++ b/works.html
@@ -90,7 +90,7 @@
                         @click="navBar = false">Resume</a>
                 </li>
             </ul>
-            <div class="w-96 h-96 -ml-56 pointer-events-none absolute  border-2 border-gray-600 rounded-full"></div>
+            <div class="hidden lg:block w-96 h-96 -ml-56 pointer-events-none absolute  border-2 border-gray-600 rounded-full"></div>
         </nav>
 
         <!-- content goes here -->
@@ -154,7 +154,7 @@
                         </div>
                     </a>
                     <div
-                        class="w-96 h-96 ml-162 -z-10 pointer-events-none absolute border-2 border-gray-600 rounded-full">
+                        class="hidden lg:block w-96 h-96 ml-162 -z-10 pointer-events-none absolute border-2 border-gray-600 rounded-full">
                     </div>
 
                 </div>
@@ -171,7 +171,7 @@
             <p class="text-slate-300 footer mt-12 mainContent">Made with <span class="text-red-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
 
-            <div class="w-96 h-96 ml-24 pointer-events-none absolute border-2 border-gray-600 rounded-full"></div>
+            <div class="hidden lg:block w-96 h-96 ml-24 pointer-events-none absolute border-2 border-gray-600 rounded-full"></div>
         </div>
     </div>
 
