update skill page

--- a/skills.html
+++ b/skills.html
@@ -156,13 +156,13 @@
                     <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
                         x-intersect="$el.classList.add('fadeInUp')">
 
-                        <h2 class="text-2xl py-5 text-white font-semibold leading-6">Procedural programming</h2>
-                        <p class="text-lg text-slate-200">PL-SQL</p>
+                        <h2 class="text-2xl py-5 text-white font-semibold leading-6">Database Languages</h2>
+                        <p class="text-lg text-slate-200">PL-SQL, SQL</p>
                         <div style="margin-top: 2rem;"
                             class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
                             <span
                                 class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]"
-                                style="width: 70%"></span>
+                                style="width: 85%"></span>
                         </div>
                     </div>
 
