--- a/skills.html
+++ b/skills.html
@@ -99,7 +99,7 @@
             <div class="flex justify-center">
 
                 <div
-                    class="grid grid-rows-5 gap-2 sm:grid-cols-2 sm:grid-rows-3 sm:mx-14 sm:mt-12 lg:grid-col-3 lg:grid-rows-2 lg:grid-flow-col lg:gap-5 lg:ml-20">
+                    class="grid grid-rows-8 gap-2 sm:grid-cols-2 sm:grid-rows-5 sm:mx-14 sm:mt-12 lg:grid-col-3 lg:grid-rows-3 lg:grid-flow-col lg:gap-5 lg:ml-20">
 
                     <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
                         x-intersect="$el.classList.add('fadeInUp')">
@@ -169,13 +169,52 @@
                     <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
                         x-intersect="$el.classList.add('fadeInUp')">
 
+                        <h2 class="text-2xl py-5 text-white font-semibold leading-6">JavaScript Framework</h2>
+                        <p class="text-lg text-slate-200">Angular</p>
+                        <div style="margin-top: 2rem;"
+                            class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
+                            <span
+                                class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]"
+                                style="width: 55%"></span>
+                        </div>
+                    </div>
+                    
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
+                        x-intersect="$el.classList.add('fadeInUp')">
+
+                        <h2 class="text-2xl py-5 text-white font-semibold leading-6">JavaScript Framework</h2>
+                        <p class="text-lg text-slate-200">React JS</p>
+                        <div style="margin-top: 2rem;"
+                            class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
+                            <span
+                                class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]"
+                                style="width: 45%"></span>
+                        </div>
+                    </div>
+
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
+                        x-intersect="$el.classList.add('fadeInUp')">
+
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">OOP</h2>
-                        <p class="text-lg text-slate-200">C/C++, Java, Python</p>
+                        <p class="text-lg text-slate-200">C/C++ & Python</p>
                         <div style="margin-top: 2rem;"
                             class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
                             <span
                                 class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]"
                                 style="width: 20%"></span>
+                        </div>
+                    </div>
+                    
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 sm:mt-0 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)] cursorHover"
+                        x-intersect="$el.classList.add('fadeInUp')">
+
+                        <h2 class="text-2xl py-5 text-white font-semibold leading-6">Web Application</h2>
+                        <p class="text-lg text-slate-200">Java</p>
+                        <div style="margin-top: 2rem;"
+                            class="w-full max-w-[185px] h-1.5 bg-slate-200 rounded-[3px] overflow-hidden">
+                            <span
+                                class="h-full block bg-[linear-gradient(90deg,#ffd33d,#ea4aaa_17%,#b34bff_34%,#01feff_51%,#ffd33d_68%,#ea4aaa_85%,#b34bff)] bg-[length:300%_100%] animate-[progress-animation_2s_linear_infinite]"
+                                style="width: 35%"></span>
                         </div>
                     </div>
                     <div class="hidden lg:block w-96 h-96 ml-174 pointer-events-none absolute border-2 border-gray-600 rounded-full">
