fix CV link not opening

--- a/skills.html
+++ b/skills.html
@@ -84,7 +84,7 @@
                         @click="navBar = false">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
-                    <a href="CV.pdf"
+                    <a href="CV.pdf" target="_blank"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
                         @click="navBar = false">Resume</a>
                 </li>
