--- a/works.html
+++ b/works.html
@@ -90,7 +90,9 @@
                         @click="navBar = false">Resume</a>
                 </li>
             </ul>
-            <div class="hidden lg:block w-96 h-96 -ml-56 pointer-events-none absolute  border-2 border-gray-600 rounded-full"></div>
+            <div
+                class="hidden lg:block w-96 h-96 -ml-56 pointer-events-none absolute  border-2 border-gray-600 rounded-full">
+            </div>
         </nav>
 
         <!-- content goes here -->
@@ -101,48 +103,9 @@
             <div class="flex justify-center">
 
                 <div
-                    class="grid grid-rows-4 gap-2 sm:mt-12 sm:grid-cols-2 sm:grid-rows-2 sm:gap-6 lg:grid-col-2 lg:grid-flow-col lg:gap-8">
-                    <a href="http://abhishekgoelandassociates.com" target="blank">
-
-                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[16rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
-                            x-intersect="$el.classList.add('fadeInUp')">
-
-                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Abhishek Goel & Associates</h2>
-                            <p class="text-lg text-slate-200">Website for Chartered Accountant firm</p>
-                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written with HTML5, SCSS and JS</p>
-
-                        </div>
-                    </a>
-
-                    <a href="https://github.com/RetroMusicPlayer" target="blank">
-
-                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
-                            x-intersect="$el.classList.add('fadeInUp')">
-
-                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Retro Music Player</h2>
-                            <p class="text-lg text-slate-200 py-1">Member and contributor of Retro Music Player, a
-                                material
-                                design, offline music player for Android.</p>
-                        </div>
-
-                    </a>
-
-                    <a href="http://mwsretail.in" target="blank">
-                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
-                            x-intersect="$el.classList.add('fadeInUp')">
-
-                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Milind Webcomm Services</h2>
-                            <p class="text-lg text-slate-200">Website for Web Designing and E-Commerce operators</p>
-                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written with TailwindCSS & AlpineJS
-                            </p>
-
-                        </div>
-
-                    </a>
-
+                    class="grid grid-rows-6 gap-2 sm:mt-12 sm:grid-cols-2 sm:grid-rows-3 sm:gap-6 lg:grid-col-2 lg:grid-flow-col lg:gap-8">
 
                     <a href="https://github.com/milindgoel15/milindgoel15.github.io" target="blank">
-
                         <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
                             x-intersect="$el.classList.add('fadeInUp')">
 
@@ -153,6 +116,63 @@
 
                         </div>
                     </a>
+
+                    <a href="http://abhishekgoelandassociates.com" target="blank">
+                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[16rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
+
+                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Abhishek Goel & Associates</h2>
+                            <p class="text-lg text-slate-200">Website for Chartered Accountant firm</p>
+                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written with HTML5, SCSS and JS</p>
+                        </div>
+                    </a>
+
+                    <a href="https://github.com/RetroMusicPlayer" target="blank">
+                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
+
+                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Retro Music Player</h2>
+                            <p class="text-lg text-slate-200 py-1">Member and contributor of Retro Music Player, a
+                                material
+                                design, offline music player for Android.</p>
+                        </div>
+                    </a>
+
+                    <a href="http://mwsretail.in" target="blank">
+                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
+
+                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Milind Webcomm Services</h2>
+                            <p class="text-lg text-slate-200">Website for Web Designing and E-Commerce operators</p>
+                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written with TailwindCSS & AlpineJS
+                            </p>
+                        </div>
+                    </a>
+
+                    <a href="https://milindgoel15.github.io/DiceGame" target="blank">
+                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
+
+                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Dice Game</h2>
+                            <p class="text-lg text-slate-200">A simple dice game playable between 2 players</p>
+                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written with TailwindCSS & JS</p>
+
+                        </div>
+                    </a>
+
+                    
+
+                    <a href="https://milindgoel15.github.io/NumberCounterApp" target="blank">
+                        <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
+                            x-intersect="$el.classList.add('fadeInUp')">
+
+                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Number Counter app</h2>
+                            <p class="text-lg text-slate-200">Basic Number Counter app</p>
+                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written in ReactJS and TailwindCSS
+                            </p>
+                        </div>
+                    </a>
+
                     <div
                         class="hidden lg:block w-96 h-96 ml-162 -z-10 pointer-events-none absolute border-2 border-gray-600 rounded-full">
                     </div>
@@ -171,7 +191,9 @@
             <p class="text-slate-300 footer mt-12 mainContent">Made with <span class="text-red-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
 
-            <div class="hidden lg:block w-96 h-96 ml-24 pointer-events-none absolute border-2 border-gray-600 rounded-full"></div>
+            <div
+                class="hidden lg:block w-96 h-96 ml-24 pointer-events-none absolute border-2 border-gray-600 rounded-full">
+            </div>
         </div>
     </div>
 
