--- a/works.html
+++ b/works.html
@@ -85,7 +85,7 @@
                         @click="navBar = false">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
-                    <a href="CV.pdf" target="_blank"
+                    <a href="CV.pdf" target="__blank"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small"
                         @click="navBar = false">Resume</a>
                 </li>
@@ -105,7 +105,7 @@
                 <div
                     class="grid grid-rows-6 gap-2 sm:mt-12 sm:grid-cols-2 sm:grid-rows-3 sm:gap-6 lg:grid-col-2 lg:grid-flow-col lg:gap-8">
 
-                    <a href="https://github.com/milindgoel15/milindgoel15.github.io" target="blank">
+                    <a href="https://github.com/milindgoel15/milindgoel15.github.io" target="_blank">
                         <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
                             x-intersect="$el.classList.add('fadeInUp')">
 
@@ -117,7 +117,7 @@
                         </div>
                     </a>
 
-                    <a href="http://abhishekgoelandassociates.com" target="blank">
+                    <a href="http://abhishekgoelandassociates.com" target="_blank">
                         <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[16rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
                             x-intersect="$el.classList.add('fadeInUp')">
 
@@ -127,7 +127,7 @@
                         </div>
                     </a>
 
-                    <a href="https://github.com/RetroMusicPlayer" target="blank">
+                    <a href="https://github.com/RetroMusicPlayer" target="_blank">
                         <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
                             x-intersect="$el.classList.add('fadeInUp')">
 
@@ -138,7 +138,7 @@
                         </div>
                     </a>
 
-                    <a href="http://mwsretail.in" target="blank">
+                    <a href="http://mwsretail.in" target="_blank">
                         <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
                             x-intersect="$el.classList.add('fadeInUp')">
 
@@ -149,7 +149,7 @@
                         </div>
                     </a>
 
-                    <a href="https://milindgoel15.github.io/DiceGame" target="blank">
+                    <a href="https://milindgoel15.github.io/DiceGame" target="_blank">
                         <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
                             x-intersect="$el.classList.add('fadeInUp')">
 
@@ -162,7 +162,7 @@
 
                     
 
-                    <a href="https://milindgoel15.github.io/NumberCounterApp" target="blank">
+                    <a href="https://milindgoel15.github.io/NumberCounterApp" target="_blank">
                         <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
                             x-intersect="$el.classList.add('fadeInUp')">
 
