update language field

--- a/works.html
+++ b/works.html
@@ -123,7 +123,7 @@
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Abhishek Goel & Associates</h2>
                             <p class="text-lg text-slate-200">Website for Chartered Accountant firm</p>
-                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written with HTML5, SCSS and JS</p>
+                            <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Rebuilt with ReactJS & TailwindCSS</p>
                         </div>
                     </a>
 
