add missing animation class

--- a/skills.html
+++ b/skills.html
@@ -93,7 +93,7 @@
         </nav>
 
         <!-- content goes here -->
-        <div class="py-32 text-center cursor-none" data-barba="container" data-barba-namespace="skills">
+        <div class="py-32 animate-this text-center cursor-none" data-barba="container" data-barba-namespace="skills">
             <h2 class="font-extrabold text-4xl py-1 xl:mx-110 2xl:mx-128 text-white cursorHover">Skills</h2>
 
             <div class="flex justify-center">
