--- a/works.html
+++ b/works.html
@@ -162,12 +162,12 @@
 
                     
 
-                    <a href="https://milindgoel15.github.io/NumberCounterApp" target="_blank">
+                    <a href="https://milindgoel15.github.io/netflix-clone" target="_blank">
                         <div class="py-8 px-6 sm:h-72 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 w-11/12 sm:ml-0 sm:w-80 sm:mt-0 md:h-72 lg:h-64 lg:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl"
                             x-intersect="$el.classList.add('fadeInUp')">
 
-                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Number Counter app</h2>
-                            <p class="text-lg text-slate-200">Basic Number Counter app</p>
+                            <h2 class="text-2xl py-5 text-white font-semibold leading-6">Netflix Clone</h2>
+                            <p class="text-lg text-slate-200">A simple Frontend Netflix clone with slightly improved styling </p>
                             <p class="text-lg text-slate-200 py-1 lg:py-2 w-11/12">Written in ReactJS and TailwindCSS
                             </p>
                         </div>
